--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -24,5 +24,6 @@
     </form>
 
     <script src="js/03-feedback.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   </body>
 </html>
